# fastmaths

./: .gitignore  AGENTS.md  Cargo.toml  MATHS_GLIBC.md  MATHS_GLIBC_DATA.md  README.md  build_libm.sh  latest_bench_foo.txt
benches/: bench_acos.rs  bench_acosh.rs  bench_asin.rs  bench_asinh.rs  bench_atan.rs  bench_atan2.rs  bench_atanh.rs  bench_cbrt.rs  bench_ceil.rs  bench_copysign.rs  bench_cos.rs  bench_cosh.rs  bench_erf.rs  bench_erfc.rs  bench_exp.rs  bench_exp10.rs  bench_exp2.rs  bench_expm1.rs  bench_fabs.rs  bench_fdim.rs  bench_floor.rs  bench_fma.rs  bench_fmax.rs  bench_fmin.rs  bench_fmod.rs  bench_frexp.rs  bench_hypot.rs  bench_ilogb.rs  bench_ldexp.rs  bench_lgamma.rs  bench_llrint.rs  bench_llround.rs  bench_ln.rs  bench_log10.rs  bench_log1p.rs  bench_log2.rs  bench_logb.rs  bench_lrint.rs  bench_lround.rs  bench_modf.rs  (+18 more)
scripts/: run_mpfr_proptest_loop.sh
src/: lib.rs  maths.rs
src/math/: acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  atanh_data.rs  cbrt.rs  cosh.rs  erf.rs  erf_data.rs  erfc_data.rs  exp.rs  exp2.rs  expm1.rs  fma.rs  fmin.rs  fmod.rs  gamma.rs  hypot.rs  log.rs  log10.rs  log1p.rs  logb.rs  mod.rs  pow.rs  remainder.rs  remquo.rs  rounding.rs  scaling.rs  sinh.rs  tan.rs  tanh.rs  trig.rs  utan_tables.rs  utils.rs
src/math/arch/: aarch64.rs  mod.rs  x86.rs
src/maths/fastlibm/: acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  cbrt.rs  classify.rs  copysign.rs  cos.rs  cosh.rs  erf.rs  exp.rs  exp10.rs  exp2.rs  expm1.rs  fdim.rs  fma.rs  fmax.rs  fmin.rs  fmod.rs  gamma.rs  hypot.rs  ilogb.rs  log.rs  log10.rs  log1p.rs  log2.rs  logb.rs  mod.rs  modf.rs  nextafter.rs  pow.rs  remainder.rs  remquo.rs  rounding.rs  scaling.rs  sin.rs  sincos_tab.rs  (+6 more)
tests/: mpfr_exp.rs
