[package]
name = "fastmaths"
version = "0.1.0"
edition = "2024"

[dependencies]
rug = { version = "1.24", optional = true, default-features = true }

[features]
mpfr = ["rug"]

[dev-dependencies]
criterion = "0.5"
libloading = "0.8"
proptest = "1.6"

[[bench]]
name = "bench_exp"
harness = false

[[bench]]
name = "bench_exp2"
harness = false

[[bench]]
name = "bench_expm1"
harness = false

[[bench]]
name = "bench_ln"
harness = false

[[bench]]
name = "bench_log2"
harness = false

[[bench]]
name = "bench_log10"
harness = false

[[bench]]
name = "bench_log1p"
harness = false

[[bench]]
name = "bench_sin"
harness = false

[[bench]]
name = "bench_cos"
harness = false

[[bench]]
name = "bench_tan"
harness = false

[[bench]]
name = "bench_asin"
harness = false

[[bench]]
name = "bench_acos"
harness = false

[[bench]]
name = "bench_atan"
harness = false

[[bench]]
name = "bench_atan2"
harness = false

[[bench]]
name = "bench_sinh"
harness = false

[[bench]]
name = "bench_cosh"
harness = false

[[bench]]
name = "bench_tanh"
harness = false

[[bench]]
name = "bench_hypot"
harness = false

[[bench]]
name = "bench_fmod"
harness = false

[[bench]]
name = "bench_remainder"
harness = false

[[bench]]
name = "bench_pow"
harness = false

[[bench]]
name = "bench_sqrt"
harness = false

[[bench]]
name = "bench_cbrt"
harness = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
